[package]
name = "filetools"
version = "0.2.0"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
edition = "2018"
description = "Port of Jonathan Grizou's filetools Python library (https://github.com/jgrizou/filetools)"
repository = "https://github.com/Tyrannican/filetools-rs"
license = "MIT"
keywords = ["files", "utility", "filesystem"]
categories = ["filesystem"]
readme = "README.md"

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
chrono = "0.3"
tokio = { version = "1.35.1", features = ["fs"] }
uuid = { version = "0.8.1", features = ["v4"]}

[dev-dependencies]
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
